--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "4.6",
+    "mapbox-gl": "^2.4.1",
+    "places.js": "^1.19.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
