--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
     "stimulus": "^2.0.0",
+    "swiper": "6.8.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
